--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<section>
+<body><section>
     <p>This is a paragraph.</p>
     <p>This is a paragraph.</p>
-  </section>
+    <p>This is a paragraph.</p>
+
+  </section></body>
