--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-<body><section>
+<html></html><body><section>
+    <p>This is a paragraph.</p>
     <p>This is a paragraph.</p>
     <p>This is a paragraph.</p>
     <p>This is a paragraph.</p>
 
-  </section></body>
+  </section></body></html>
