--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html></html><body><section>
+<html><body><section>
     <p>This is a paragraph.</p>
     <p>This is a paragraph.</p>
     <p>This is a paragraph.</p>
